<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GettingStartedActivity">

    <!-- Back button -->
    <ImageButton
        android:id="@+id/register_btnBack"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/primaryBackButton" />

    <!-- Header -->
    <TextView
        android:id="@+id/register_tvHeader"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_tvBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btnBack"
        style="@style/m_top_20" />

    <TextView
        android:id="@+id/register_tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/already_have_an_account_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvHeader" />

    <TextView
        android:id="@+id/register_tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login"
        android:textColor="@color/blue_500"
        app:layout_constraintStart_toEndOf="@id/register_tvBody"
        app:layout_constraintTop_toBottomOf="@id/register_tvHeader" />

    <!-- Username -->
    <TextView
        android:id="@+id/register_tvUsername"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvBody"
        style="@style/m_top_40" />

    <EditText
        android:id="@+id/register_etUsername"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvUsername"
        style="@style/formEditText" />

    <TextView
        android:id="@+id/register_tvUsernameError"
        android:text="@string/invalid_input_entered"
        android:textColor="?colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_etUsername"
        style="@style/m_horizontal_20"
        tools:visibility="visible" />

    <!-- Email -->
    <TextView
        android:id="@+id/register_tvEmail"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvUsernameError"
        style="@style/m_top_20" />

    <EditText
        android:id="@+id/register_etEmail"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvEmail"
        style="@style/formEditText" />

    <TextView
        android:id="@+id/register_tvEmailError"
        android:text="@string/invalid_input_entered"
        android:textColor="?colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_etEmail"
        style="@style/m_horizontal_20"
        tools:visibility="visible" />

    <!-- Password -->
    <TextView
        android:id="@+id/register_tvPassword"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvEmailError"
        style="@style/m_top_20"/>

    <EditText
        android:id="@+id/register_etPassword"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvPassword"
        style="@style/formEditText" />

    <TextView
        android:id="@+id/register_tvPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_input_entered"
        android:textColor="?colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_etPassword"
        style="@style/m_horizontal_20"
        tools:visibility="visible" />

    <!-- Register button -->
    <Button
        android:id="@+id/register_btnRegister"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tvPasswordError"
        style="@style/primaryButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>