<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <!-- Back button -->
    <ImageButton
        android:id="@+id/credits_btnBack"
        android:background="@null"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/backButton" />

    <!-- Credits text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/credits"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Darren -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credits_constraintLayoutDarren"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credits_btnBack"
        style="@style/credits_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/credits_profilePictureDarren"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNameDarren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/darren_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureDarren"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNimDarren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/darren_nim"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureDarren"
            app:layout_constraintTop_toBottomOf="@id/credits_tvNameDarren" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Elfajar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credits_constraintLayoutElfajar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credits_constraintLayoutDarren"
        style="@style/credits_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/credits_profilePictureElfajar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNameElfajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/elfajar_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureElfajar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNimElfajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/elfajar_nim"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureElfajar"
            app:layout_constraintTop_toBottomOf="@id/credits_tvNameElfajar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Gilang -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credits_constraintLayoutGilang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credits_constraintLayoutElfajar"
        style="@style/credits_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/credits_profilePictureGilang"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNameGilang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/gilang_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureGilang"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNimGilang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/gilang_nim"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureGilang"
            app:layout_constraintTop_toBottomOf="@id/credits_tvNameGilang" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Nehemia -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credits_constraintLayoutNehemia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credits_constraintLayoutGilang"
        style="@style/credits_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/credits_profilePictureNehemia"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNameNehemia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nehemia_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureNehemia"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNimNehemia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/nehemia_nim"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureNehemia"
            app:layout_constraintTop_toBottomOf="@id/credits_tvNameNehemia" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Norbertus -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credits_constraintLayoutNorbertus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credits_constraintLayoutNehemia"
        style="@style/credits_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/credits_profilePictureNorbertus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNameNorbertus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/norbertus_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureNorbertus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credits_tvNimNorbertus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/norbertus_nim"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/credits_profilePictureNorbertus"
            app:layout_constraintTop_toBottomOf="@id/credits_tvNameNorbertus" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>