<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!-- Back button -->
    <ImageButton
        android:id="@+id/settings_btnBack"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/primaryBackButton" />

    <!-- Settings text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/settings"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/settings_btnDarkTheme"
        app:layout_constraintStart_toEndOf="@id/settings_btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dark theme toggle -->
    <ImageButton
        android:id="@+id/settings_btnDarkTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/toggle_dark_theme"
        android:padding="4dp"
        android:src="@drawable/ic_moon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile picture -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profilePicture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="?colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btnBack" />

    <!-- Username -->
    <TextView
        android:id="@+id/settings_tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/lorem_ipsum"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/settings_profilePicture"
        app:layout_constraintTop_toBottomOf="@id/settings_btnBack"/>

    <!-- Edit profile text -->
    <TextView
        android:id="@+id/settings_tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/edit_profile"
        android:textColor="?neutral3"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/settings_profilePicture"
        app:layout_constraintTop_toBottomOf="@id/settings_tvUsername"/>

    <!-- View profile button -->
    <ImageButton
        android:id="@+id/settings_btnViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/view_profile"
        android:padding="4dp"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="@+id/settings_profilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_profilePicture" />

    <!-- Getting started -->
    <ImageView
        android:id="@+id/settings_imgGettingStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/getting_started"
        android:padding="6dp"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnGettingStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_btnGettingStarted" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/getting_started"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnGettingStarted"
        app:layout_constraintStart_toEndOf="@id/settings_imgGettingStarted"
        app:layout_constraintTop_toTopOf="@+id/settings_btnGettingStarted" />

    <ImageButton
        android:id="@+id/settings_btnGettingStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:background="@null"
        android:contentDescription="@string/getting_started"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_profilePicture" />

    <!-- Homepage -->
    <ImageView
        android:id="@+id/settings_imgHomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/homepage"
        android:padding="6dp"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnHomepage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_btnHomepage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/homepage"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnHomepage"
        app:layout_constraintStart_toEndOf="@id/settings_imgHomepage"
        app:layout_constraintTop_toTopOf="@+id/settings_btnHomepage" />

    <ImageButton
        android:id="@+id/settings_btnHomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        android:contentDescription="@string/homepage"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btnGettingStarted" />

    <!-- Popular places -->
    <ImageView
        android:id="@+id/settings_imgPopularPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/popular_places"
        android:padding="6dp"
        android:src="@drawable/ic_restaurant"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnPopularPlaces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_btnPopularPlaces" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/popular_places"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnPopularPlaces"
        app:layout_constraintStart_toEndOf="@id/settings_imgPopularPlaces"
        app:layout_constraintTop_toTopOf="@+id/settings_btnPopularPlaces" />

    <ImageButton
        android:id="@+id/settings_btnPopularPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        android:contentDescription="@string/popular_places"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btnHomepage" />

    <!-- Your favorites -->
    <ImageView
        android:id="@+id/settings_imgYourFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/your_favorites"
        android:padding="6dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnYourFavorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_btnYourFavorites" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/your_favorites"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnYourFavorites"
        app:layout_constraintStart_toEndOf="@id/settings_imgYourFavorites"
        app:layout_constraintTop_toTopOf="@+id/settings_btnYourFavorites" />

    <ImageButton
        android:id="@+id/settings_btnYourFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        android:contentDescription="@string/your_favorites"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btnPopularPlaces" />

    <!-- Credits -->
    <ImageView
        android:id="@+id/settings_imgCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/credits"
        android:padding="6dp"
        android:src="@drawable/ic_credits"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnCredits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_btnCredits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/credits"
        app:layout_constraintBottom_toBottomOf="@+id/settings_btnCredits"
        app:layout_constraintStart_toEndOf="@id/settings_imgCredits"
        app:layout_constraintTop_toTopOf="@+id/settings_btnCredits" />

    <ImageButton
        android:id="@+id/settings_btnCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        android:contentDescription="@string/credits"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btnYourFavorites" />

    <Button
        android:text="@string/logout"
        android:textColor="?colorPrimary"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/secondaryButton" />


</androidx.constraintlayout.widget.ConstraintLayout>